syntax = "proto3";

package client;

service ClientService {
  rpc RegisterClient (ClientRegistrationRequest) returns (ClientRegistrationResponse);
  rpc AuthenticateClient (AuthRequest) returns (AuthResponse);
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
  rpc CheckBalance (BalanceRequest) returns (BalanceResponse);
}

message ClientRegistrationRequest {
  string username = 1;
  string password = 2;
  string bank_name = 3;
  string account_number = 4;
}

message ClientRegistrationResponse {
  bool success = 1;
  string message = 2;
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  bool authenticated = 1;
  string token = 2;
}

message PaymentRequest {
  string token = 1;
  string from_account = 2;
  string to_account = 3;
  string bank_name = 4;
  double amount = 5;
}

message PaymentResponse {
  bool success = 1;
  string message = 2;
}

message BalanceRequest {
  string token = 1;
  string account_number = 2;
}

message BalanceResponse {
  double balance = 1;
}
